@@ -38,3 +38,4 @@ Version 1.1
  - Fixed Issue 331 - Update Fibaro RGBWM441 Config File (Alex)
  - Add new id for GE Duplex Receptacle (Alex) 
  - Add 18 new ids for Vision devices (Alex)
+ - Add Device Qees RETO Plug-in Switch Plus Config File (Alex)
